--- a/application/templates/lobby.html
+++ b/application/templates/lobby.html
@@ -9,7 +9,10 @@
         <link rel="stylesheet" href="/static/game/styles/main.css">
         <title>Game</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-        {% if request.path == "/game_lobby/" + lobby.lobby_index.__str__() + "/" %}
+        <script>
+            const lobby_id = {{ lobby_id }}
+        </script>
+        {% if request.path == "/game_lobby/" + lobby_id + "/" %}
             <script src="/static/game/scripts/ajax.js"></script>
         {% else %}
             <script src="/static/game/scripts/main.js"></script>
@@ -18,8 +21,9 @@
     </head>
     <body>
         <div class="body">
-        {% if not game%}
+        {% if not game %}
             <form method="post">
+                <input name="start" type="hidden" value="start"/>
                 <input name="csrf_token" type="hidden" id="csrf_token" value="{{ csrf_token() }}" />
                 <input type="submit" value="Start game" />
             </form>
