--- a/application/static/game/styles/main.css
+++ b/application/static/game/styles/main.css
@@ -55,14 +55,9 @@ body {
     box-shadow: none!important;
 }
 
-.deck-card {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 80px;
-    height: 110px;
-    z-index: 2;
-    transform: rotateZ(90deg);
+.deck .card:last-child {
+    z-index: -1;
+    transform: rotateZ(90deg) translateY(-15px);
 }
 
 /* Позиционирование и размеры поля для игры */
@@ -109,8 +104,10 @@ body {
 
 .player-description {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
+    justify-content: space-between;
     align-items: center;
+    height: 200px;
 }
 
 /* Стилизация пользовательской информации */
@@ -137,8 +134,7 @@ body {
     justify-content: space-between;
     align-items: flex-end;
     width: 200px;
-    height: 80px;
-    margin-top: 20px;
+    height: 110px;
 }
 
 /* Стилизация карт пользователя */
@@ -148,7 +144,31 @@ body {
 .card {
     position: absolute;
     box-shadow: -1px 1px 2px 2px rgba(255, 3, 3, 0.4);
-    transition: 0.05s transform linear;
+    perspective: 500px;
+    width: 80px;
+    height: 110px;
+    border-radius: 5px;
+    transition: all 0.5s;
+}
+
+.card-content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+}
+
+.card-front,
+.card-back {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.card-back {
+    transform: rotateY(180deg);
 }
 
 /* Стиль для карт расположенных в ячейках для карт(снизу) */
@@ -175,11 +195,6 @@ body {
     box-shadow: -1px 1px 2px 2px rgb(0, 122, 47);
 }
 
-.my-card:active {
-    cursor: pointer;
-    transform: rotateZ(0deg) translateY(-30px);
-}
-
 /* Позиционирование и размеры масти и цифры на карте */
 
 .card-info {
@@ -199,11 +214,16 @@ body {
 
 /* Задний фон и размеры карт */
 
+.card-back-layout {
+    position: absolute;
+    top: 0;
+}
+
 .card-layout {
     background-color: white;
     border-radius: 5px;
-    width: 80px;
-    height: 110px;
+    width: 100%;
+    height: 100%;
 }
 
 /* Стиль для карт, перетаскиваемых пользователем */
