--- a/application/templates/admin.html
+++ b/application/templates/admin.html
@@ -11,12 +11,12 @@
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
   <!-- Material Kit CSS -->
-  <link href="/static/assets/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
+  <link href="/static/admin/css/material-dashboard.css?v=2.1.0" rel="stylesheet" />
 </head>
 
 <body class="dark-edition">
   <div class="wrapper ">
-    <div class="sidebar" data-color="purple" data-background-color="black" data-image="./assets/img/sidebar-2.jpg">
+    <div class="sidebar" data-color="purple" data-background-color="black" data-image="/static/admin/img/sidebar-2.jpg">
       <!--
       Tip 1: You can change the color of the sidebar using: data-color="purple | azure | green | orange | danger"
 
@@ -79,23 +79,23 @@
     </div>
   </div>
   <!--   Core JS Files   -->
-  <script src="/static/assets/js/core/jquery.min.js"></script>
-  <script src="/static/assets/js/core/popper.min.js"></script>
-  <script src="/static/assets/js/core/bootstrap-material-design.min.js"></script>
+  <script src="/static/admin/js/core/jquery.min.js"></script>
+  <script src="/static/admin/js/core/popper.min.js"></script>
+  <script src="/static/admin/js/core/bootstrap-material-design.min.js"></script>
   <script src="https://unpkg.com/default-passive-events"></script>
-  <script src="/static/assets/js/plugins/perfect-scrollbar.jquery.min.js"></script>
+  <script src="/static/admin/js/plugins/perfect-scrollbar.jquery.min.js"></script>
   <!-- Place this tag in your head or just before your close body tag. -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!--  Google Maps Plugin    -->
   <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
   <!-- Chartist JS -->
-  <script src="/static/assets/js/plugins/chartist.min.js"></script>
+  <script src="/static/admin/js/plugins/chartist.min.js"></script>
   <!--  Notifications Plugin    -->
-  <script src="/static/assets/js/plugins/bootstrap-notify.js"></script>
+  <script src="/static/admin/js/plugins/bootstrap-notify.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="./assets/js/material-dashboard.js?v=2.1.0"></script>
+  <script src="/static/admin/js/material-dashboard.js?v=2.1.0"></script>
   <!-- Material Dashboard DEMO methods, don't include it in your project! -->
-  <script src="/static/assets/demo/demo.js"></script>
+  <script src="/static/admin/demo/demo.js"></script>
   <script>
     $(document).ready(function() {
       $().ready(function() {
