--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/index/styles/normalise.css">
+    <link rel="stylesheet" href="/static/gen-styles/normalise.css">
     <link rel="stylesheet" href="/static/index/styles/main.css">
     <script src="/static/index/scripts/music.js"></script>
     <title>GameZone</title>
@@ -48,7 +48,7 @@
                     </ul>
                     <ul class="section-hero__nav-list">
                         <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow">
-                            <a href="/game_lobby/1/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a>
+                            <a href="/game_menus/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a>
                         </li>
                         <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-white">
                             <a href="#" class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a>
