--- a/application/static/menu/styles/main.css
+++ b/application/static/menu/styles/main.css
@@ -3,6 +3,72 @@
     padding: 0;
 }
 
+input {
+    background: transparent;
+    outline: none;
+    border: none;
+    font-size: 20px;
+    font-weight: 500;
+    color:rgba(255, 255, 255, 0.63);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.63);
+}
+
+.top-offset {
+    margin-top: 20px;
+}
+
+ul {
+    list-style: none;
+}
+
 .hidden {
     display: none;
 }
+
+.main {
+    display: flex;
+    z-index: -1;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-image: url('/static/menu/images/back.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    justify-content: center;
+}
+
+.select-lobby__section {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    height: 100%;
+    overflow-y: auto;
+    box-sizing: border-box;
+    background: linear-gradient(57deg, rgba(2, 2, 2, 0.8), rgba(29, 26, 26, 0.486) 50%, rgba(2, 2, 2, 0.63));
+}
+
+.wrapper {
+    width: 60%;
+}
+
+.select-lobby__list,
+.select-lobby__list-item,
+.lobby-info {
+    width: 100%;
+}
+
+.select-lobby__list {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.lobby-info {
+    display: flex;
+    justify-content: space-around;
+    height: 150px;
+    overflow-x: auto;
+}
+
