--- a/application/templates/card_templates/deck.html
+++ b/application/templates/card_templates/deck.html
@@ -1,4 +1,4 @@
-{% for card in buffer[player.__str__()] %}
+{% for card in cards %}
     {% with player=player %}
         {% include 'card_templates/cards_in_use.html' %}
     {% endwith %}
