--- a/application/templates/card_templates/user_card.html
+++ b/application/templates/card_templates/user_card.html
@@ -1,4 +1,4 @@
-<div draggable="true" class="card {{ active }} {{ role }}"
+<div draggable="true" class="card {{ active }} {{ role }} {{ main_trump }}"
      data-value="{{ card }}" data-player="{{ player }}" style="color: {{ card.color }}">
     <div class="card-content">
         <div class="card-front">
