--- a/application/templates/card_templates/cards_in_use.html
+++ b/application/templates/card_templates/cards_in_use.html
@@ -1,5 +1,6 @@
-{% if player == request.player %}
-    {% with card=card, active=player.vars['active'], role=player.vars['role'] %}
+{% if player == request.player or card == game.trump %}
+    {% set trump = "trump-card" if card == game.trump and player != request.player %}
+    {% with card=card, active=player.vars['active'], role=player.vars['role'], main_trump=trump %}
         {% include 'card_templates/user_card.html' %}
     {% endwith %}
 {% else %}
