--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/gen-styles/normalise.css">
     <link rel="stylesheet" href="/static/index/styles/main.css">
+    <link rel="stylesheet" href="/static/index/styles/media.css">
     <script src="/static/index/scripts/music.js"></script>
     <title>GameZone</title>
 </head>
@@ -47,10 +48,10 @@
                         <li class="action-list__item action-list__item_margin-left">PLAY!</li>
                     </ul>
                     <ul class="section-hero__nav-list">
-                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-yellow">
+                        <li class="nav-list__item nav-list__item_color-yellow">
                             <a href="/game_menus/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a>
                         </li>
-                        <li class="nav-list__item nav-list__item_modify-size nav-list__item_color-white">
+                        <li class="nav-list__item nav-list__item_color-white">
                             <a href="#" class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a>
                         </li>
                     </ul>
