--- a/application/static/menu/styles/main.css
+++ b/application/static/menu/styles/main.css
@@ -3,14 +3,37 @@
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 input {
+    max-width: 100%;
     background: transparent;
     outline: none;
     border: none;
-    font-size: 20px;
     font-weight: 500;
-    color:rgba(255, 255, 255, 0.63);
-    border-bottom: 2px solid rgba(255, 255, 255, 0.63);
+    color: rgba(255, 255, 255, 0.63);
+}
+
+.field__line {
+    position: absolute;
+    width: 0;
+    height: 2px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 0.63);
+    transition: width 0.6s ease-in-out;
+}
+
+input:focus + .field__line {
+    width: 100%;
+}
+
+.create-lobby__button {
+    cursor: pointer;
 }
 
 .top-offset {
@@ -28,7 +51,6 @@ ul {
 .main {
     display: flex;
     z-index: -1;
-    position: fixed;
     width: 100%;
     height: 100vh;
     background-image: url('/static/menu/images/back.jpg');
@@ -51,6 +73,17 @@ ul {
     width: 60%;
 }
 
+.panel,
+.panel .wrapper,
+.panel__button {
+    width: 100%
+}
+
+.panel__button {
+    cursor: crosshair;
+    height: 50px;
+}
+
 .select-lobby__list,
 .select-lobby__list-item,
 .lobby-info {
@@ -65,10 +98,59 @@ ul {
     align-items: center;
 }
 
+.form {
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
+}
+
 .lobby-info {
     display: flex;
-    justify-content: space-around;
-    height: 150px;
-    overflow-x: auto;
+    justify-content: flex-start;
+    overflow: hidden;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+    font-size: 3em;
+}
+
+.lobby-info_borders {    border-bottom: 2px solid silver;
+    border-top: 2px solid silver;
+    padding: 7px 0;
+}
+
+.lobby__info-item:not(:last-child) {
+    margin-right: 20px;
+}
+
+@keyframes glow {
+    0% {
+        text-shadow: silver 1px 0 1px;
+        filter: brightness(200%);
+    }
+    50% {
+        text-shadow: silver 1px 0 10px;
+        filter: brightness(500%);
+    }
+    100% {
+        text-shadow: silver 1px 0 1px;
+        filter: brightness(200%);
+    }
+}
+
+.lobby__info-item,
+.lobby-info__label{
+    color: #FFF;
+    filter: brightness(200%);
+    animation: 3s infinite glow;
+}
+
+.lobby-info__field {
+    position: relative;
+    width: 100%;
+    margin-bottom: 10px;
+}
+
+.lobby-info__field:not(:last-child) {
+    margin-right: 15px;
 }
 
