--- a/application/templates/lobby.html
+++ b/application/templates/lobby.html
@@ -7,12 +7,13 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/static/gen-styles/normalise.css">
         <link rel="stylesheet" href="/static/game/styles/main.css">
+    <link rel="stylesheet" href="/static/game/styles/media.css">
         <title>Game</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script>
-            const lobby_id = {{ lobby_id }}
+            const lobby_id = {{ lobby.lobby_index }}
         </script>
-        {% if request.path == "/game_lobby/" + lobby_id + "/" %}
+        {% if request.path == "/game_lobby/" + lobby.lobby_index.__str__() + "/" %}
             <script src="/static/game/scripts/ajax.js"></script>
         {% else %}
             <script src="/static/game/scripts/main.js"></script>
@@ -22,11 +23,18 @@
     <body>
         <div class="body">
         {% if not game %}
-            <form method="post">
-                <input name="start" type="hidden" value="start"/>
-                <input name="csrf_token" type="hidden" id="csrf_token" value="{{ csrf_token() }}" />
-                <input type="submit" onclick="iter_is_allowed = false" id="start-button" value="Start game" />
-            </form>
+            {% if request.user == lobby.owner %}
+                <form class="start-game__form" method="post">
+                    <input name="start" type="hidden" value="start"/>
+                    <input name="csrf_token" type="hidden" id="csrf_token" value="{{ csrf_token() }}" />
+                    <input type="submit" onclick="iter_is_allowed = false" id="start-button" value="Start game" />
+                </form>
+            {% endif %}
+            <div class="table-wrapper">
+                {% with users=lobby.users %}
+                    {% include "lobby-users.html" %}
+                {% endwith %}
+            </div>
         {% else %}
             <div class="game">
                 {% include "game.html" %}
