--- a/application/static/index/styles/main.css
+++ b/application/static/index/styles/main.css
@@ -144,7 +144,7 @@ ul {
 }
 
 .nav-list__link_color-yellow {
-    background: #FCFB00
+    background: #FCFB00;
 }
 
 .nav-list__link_color-yellow {
