--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -52,7 +52,7 @@
                             <a href="/game_menus/" class="nav-list__link nav-list__link_color-yellow">PLAY NOW ✔</a>
                         </li>
                         <li class="nav-list__item nav-list__item_color-white">
-                            <a href="#" class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a>
+                            <a class="nav-list__link nav-list__link_color-white">HOW TO PLAY ✔</a>
                         </li>
                     </ul>
                 </div>
