--- a/application/templates/menu.html
+++ b/application/templates/menu.html
@@ -19,7 +19,7 @@
                                     <span class="lobby__info-item lobby-index">№_{{ lobby.lobby_index }}</span>
                                     <span class="lobby__info-item lobby-name">"{{ lobby.name }}"</span>
                                     <span class="lobby__info-item lobby-owner">Owner - {{ lobby.owner }}</span>
-                                    <span class="lobby__info-item lobby-player-count">max 🧍 {{ lobby.people_count }}</span>
+                                    <span class="lobby__info-item lobby-player-count">max 🧍 {{ lobby.player_count }}</span>
                                 </div>
                             </a>
                         </li>
