--- a/application/templates/card_templates/cards_in_use.html
+++ b/application/templates/card_templates/cards_in_use.html
@@ -1,4 +1,4 @@
-{% if player == request.player or card == game.trump %}
+{% if player.compare(request.player) %}
     {% set trump = "trump-card" if card == game.trump and player != request.player %}
     {% with card=card, active=player.vars['active'], role=player.vars['role'], main_trump=trump %}
         {% include 'card_templates/user_card.html' %}
