--- a/application/templates/lobby.html
+++ b/application/templates/lobby.html
@@ -5,11 +5,11 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="/static/gen-styles/normalise.css">
+        <link rel="stylesheet" href="/static/gen/styles/normalise.css">
         <link rel="stylesheet" href="/static/game/styles/main.css">
     <link rel="stylesheet" href="/static/game/styles/media.css">
         <title>Game</title>
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+        <script type="text/javascript" src="/static/gen/scripts/jquery.min.js"></script>
         <script>
             const lobby_id = {{ lobby.lobby_index }}
         </script>
